# AgentLens

./: .gitignore  AGENTLENS_UPDATED_PLAN.md  DEPLOYMENT.md  PORTFOLIO_STRATEGY (1).md  README.md  docker-compose.yml
.do/: app.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: auth.py  auth0.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/middleware/: request_logging.py
backend/app/routes/: auth_routes.py  executions.py  keys.py  stats.py  traces.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_api.sh  test_auth.py  test_executions.py  test_health.py  test_keys.py  test_multi_tenancy.py  test_stats.py  test_traces.py
docs/: architecture.md  decisions.md
examples/: auto_capture_demo.py  auto_capture_simulated.py  multi_step_agent.py  simple_agent.py
frontend/: .env.example  Dockerfile.dev  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ExecutionTable.jsx  Layout.jsx  ProtectedRoute.jsx  StatCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  ExecutionPage.jsx  Login.jsx  Onboarding.jsx  Settings.jsx
sdk/: README.md  pyproject.toml
sdk/agentlens/: __init__.py  client.py  pricing.py  recorder.py  sender.py  trace.py
sdk/agentlens/patchers/: anthropic_patcher.py  openai_patcher.py
